--- a/examples/tts/conf/tacotron2.yaml
+++ b/examples/tts/conf/tacotron2.yaml
@@ -31,8 +31,11 @@ model:
     dataloader_params:
       drop_last: false
       shuffle: true
-      batch_size: 48
-      num_workers: 4
+      batch_size: 12
+      num_workers: 1
+  init_from_nemo_model: ["./tts_en_tacotron2.nemo"]
+  init_from_pretrained_model: []
+  init_from_ptl_ckpt: []
 
 
   validation_ds:
@@ -51,8 +54,8 @@ model:
     dataloader_params:
       drop_last: false
       shuffle: false
-      batch_size: 48
-      num_workers: 8
+      batch_size: 4
+      num_workers: 1
 
   preprocessor:
     _target_: nemo.collections.asr.parts.preprocessing.features.FilterbankFeatures
@@ -122,7 +125,7 @@ model:
 
 trainer:
   gpus: 1 # number of gpus
-  max_epochs: ???
+  max_epochs: 100
   num_nodes: 1
   accelerator: ddp
   accumulate_grad_batches: 1
@@ -130,11 +133,29 @@ trainer:
   logger: False  # Provided by exp_manager
   gradient_clip_val: 1.0
   flush_logs_every_n_steps: 1000
-  log_every_n_steps: 200
+  log_every_n_steps: 50
   check_val_every_n_epoch: 25
-
+  
+  
 exp_manager:
   exp_dir: null
   name: ${name}
-  create_tensorboard_logger: True
-  create_checkpoint_callback: True
+  create_tensorboard_logger: true
+  create_checkpoint_callback: true
+  checkpoint_callback_params:
+    # in case of multiple validation sets, first one is used
+    monitor: "val_loss"
+    mode: "min"
+    save_top_k: 3
+    always_save_nemo: True # saves the checkpoints as nemo files instead of PTL checkpoints
+
+  # you need to set these two to True to continue the training
+  resume_if_exists: true
+  resume_ignore_no_checkpoint: true
+#
+#exp_manager:
+#  exp_dir: null
+#  name: ${name}
+#  create_tensorboard_logger: True
+#  create_checkpoint_callback: True
+
